обновляем сервисы с использованием новых репо